plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.5'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.MyProject'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}
ext {
	mapstructVersion = "1.5.5.Final"
}
repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'


	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.1.5'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '3.1.5'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '3.1.5'
	implementation group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: '3.1.5'
	implementation group: 'org.postgresql', name: 'postgresql', version: '42.6.0'
	implementation group: 'com.h2database', name: 'h2', version: '2.2.224'

	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
	annotationProcessor "org.mapstruct:mapstruct-processor:1.5.5.Final"

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

